# rust-axum-api

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
